still working on alignment/flexbox issues

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,13 @@
      font-family: "Roboto", sans-serif;
  }
 
+ header {
+     /* display: flex; */
+     background-color: #F2F2F2;
+     margin: 0px;
+     padding: 25px;
+ }
+
  ul {
      display: flex;
      flex-direction: column;
@@ -18,30 +25,12 @@
 
  h1 {
      color: #20a8b4;
+     font-size: 3em;
  }
-
- /* ul {
-     display: flex;
-     gap: 15px;
-     list-style-type: none;
-     padding: 0;
-     margin-top: -10px;
-     font-size: 20px;
-     color: black;
- } */
 
  a {
      text-decoration: none;
      color: inherit;
- }
-
- header {
-     display: flex;
-     flex-direction: column;
-     justify-content: flex-start;
-     background-color: #F2F2F2;
-     margin: 0px;
-     padding: 25px;
  }
 
  main {
@@ -64,76 +53,20 @@
 
  /* MEDIA QUERIES */
 
- @media screen and (max-width: 480px) {
-     body {
-         background-color: #20a8b479;
-     }
-
-     header {
-         display: flex;
-         flex-direction: column;
-         /* align-items: center; */
-         /* justify-content: space-between; */
-         /* background-color: #F2F2F2; */
-         margin: 0px;
-         padding: 25px;
-     }
-
-     main {
-         display: flex;
-         flex-direction: column;
-         justify-content: flex-start;
-         /* background-color: red; */
-         margin: 0px;
-         margin-top: 35px;
-         padding: 25px;
-     }
-
- }
+ @media screen and (max-width: 480px) {}
 
  @media screen and (min-width: 992px) {
-
-     body {
-         background-color: #20a8b479;
-     }
      header {
          display: flex;
-         flex-direction: row;
          justify-content: space-between;
-         /* background-color: #F2F2F2; */
-         border: 2px solid blue;
-         margin: 0px;
-         padding: 25px;
+         /* background-color: rgba(0, 0, 255, 0.549); */
      }
 
-     #contact-button {
-        max-height: 45px;
-        max-width: 200px;
-        padding: 12px;
-    }
-
-     #learn-more-button {
-         max-width: 175px;
-         padding: 12px;
+     .nav-button-container {
+        display: flex;
      }
-
-
-     ul {
-         display: flex;
-         flex-direction: row;
-         /* border: solid 2px rgb(30, 255, 0); */
+     .link-list-container {
+        display: flex;
+        background-color: rgba(0, 128, 0, 0.577);
      }
-
-
-
-     main {
-         display: flex;
-         flex-direction: column;
-         justify-content: flex-start;
-         /* background-color: blue; */
-         margin: 0px;
-         margin-top: 35px;
-         padding: 25px;
-     }
-
  }
